--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script defer src="./js/script.js"></script>
 
   <title>Pokédex</title>
+<link href:"https://kaysilvha.github.io/pokedex/style.css" rel:"stylesheet"/>
+<script src:"https://kaysilvha.github.io/pokedex/script.js"/script>
 </head>
 <body>
   
